--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
   <div class="container">
     <!-- Timeblocks go here -->
-    <div id="8am" class="time-block">
+    <div id="hour8" class="time-block">
       <div class="col-md-1 hour">
         8 AM
       </div>
@@ -29,7 +29,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour9" class="time-block">
       <div class="col-md-1 hour">
         9 AM
       </div>
@@ -37,7 +37,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour10" class="time-block">
       <div class="col-md-1 hour">
         10 AM
       </div>
@@ -45,7 +45,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour11" class="time-block">
       <div class="col-md-1 hour">
         11 AM
       </div>
@@ -53,7 +53,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour12" class="time-block">
       <div class="col-md-1 hour">
         12 PM
       </div>
@@ -61,7 +61,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour1" class="time-block">
       <div class="col-md-1 hour">
         1 PM
       </div>
@@ -69,7 +69,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour2" class="time-block">
       <div class="col-md-1 hour">
         2 PM
       </div>
@@ -77,7 +77,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour3" class="time-block">
       <div class="col-md-1 hour">
         3 PM
       </div>
@@ -85,7 +85,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour4" class="time-block">
       <div class="col-md-1 hour">
         4 PM
       </div>
@@ -93,7 +93,7 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div id="8am" class="time-block">
+    <div id="hour5" class="time-block">
       <div class="col-md-1 hour">
         5 PM
       </div>
